Add main content to the html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Responsive section</title>
 </head>
 <body>
-
+  <section>
+    <h1>Dragon</h1>
+    <p>Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
+  </section>
 </body>
 </html>
