Add images and classes to html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <title>Responsive section</title>
 </head>
 <body>
-  <section>
-    <h1>Dragon</h1>
-    <p>Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
+  <section class="wrapper">
+    <img class="secion-letter"src="images/dragon-letter.svg" alt="">
+    <img class="section-icon"src="images/dragon.svg" alt="">
+    <div class="section-body">
+      <h2>Dragon</h2>
+      <p>Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
+    </div>
   </section>
 </body>
 </html>
