--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <section class="wrapper">
-    <img class="secion-letter"src="images/dragon-letter.svg" alt="">
-    <img class="section-icon"src="images/dragon.svg" alt="">
+    <div class="img-flex">
+      <img class="secion-letter"src="images/dragon-letter.svg" alt="">
+      <img class="section-icon"src="images/dragon.svg" alt="">
+    </div>
     <div class="section-body">
       <h2>Dragon</h2>
       <p>Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
