--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <section class="wrapper">
     <div class="img-flex">
-      <img class="secion-letter"src="images/dragon-letter.svg" alt="">
+      <img class="section-letter"src="images/dragon-letter.svg" alt="">
       <img class="section-icon"src="images/dragon.svg" alt="">
     </div>
     <div class="section-body">
